[project]
name = "web-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "fastapi[standard]>=0.136.3",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
]
